--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
 		</div>
 	</div>
 	
-	<p/> En la siguiente tabla encontrará a qué centro acudir dependiendo de su código postal:</p>
+	<p/> Para evitar el mayor número de contacto, se procederá a realizar la prueba desde la ventanilla de su vehículo. 
+	En la siguiente tabla encontrará a qué centro acudir dependiendo de su código postal:</p>
 	<p><table>
 		<thead>
 			<tr>
