--- a/index.html
+++ b/index.html
@@ -142,18 +142,18 @@
 				<td>28100</td>
 				<td>Centro Médico Valdavia</td>
 				<td>Calle del Marqués de la Valdavia, 43</td>
-			<tr>
+			</tr>
 			<tr>
 				<td>28108</td>
 				<td>Centro de Salud Arroyo de la Vega</td>
 				<td>Bulevar de Salvador Allende, 22</td>
-			<tr>
+			</tr>
 			<tr>
 				<td>28109</td>
 				<td>Policlínico HM Moraleja</td>
 				<td>Paseo de Alcobendas, 10</td>
-			<tr>
-		<tbody>
+			</tr>
+		</tbody>
 	</table></p>
 	
 	<footer>
